@@ -5,6 +5,7 @@ DPY=$(DEBPYTHON_DEFAULT)
 
 check:
 	grep -q "Depends: .*python-mako" debian/python-foo/DEBIAN/control
+	grep -q 'python-foo (>= 2:0.1~rc2)' debian/python-foo/DEBIAN/control
 	test -f debian/python-foo/usr/lib/python2.6/dist-packages/foo/__init__.py
 	test ! -f debian/python-foo/usr/lib/python2.6/dist-packages/foo/spam.py
 	grep -q "Depends: .*python (<<" debian/python-foo/DEBIAN/control
